--- a/DreamLuso.WebApi/appsettings.Development.json
+++ b/DreamLuso.WebApi/appsettings.Development.json
@@ -12,7 +12,7 @@
     "ExpirationInMinutes": 60
   },
   "ConnectionStrings": {
-    //"DreamLusoCS": "Server=192.168.1.107;Database=DV_FC_RO_DreamLuso;User Id=Students; Password=SkillUpForTomorrow; TrustServerCertificate=True"
+    //"DreamLusoCS": "Server=db.assembly.pt;Database=DV_FC_RO_DreamLuso;User Id=Students; Password=SkillUpForTomorrow; TrustServerCertificate=True"
     "DreamLusoCS": "Server=localhost\\SQLEXPRESS02;Database=DV_FC_RO_DreamLuso;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
 
   }
