Alter Database and Add new cqrs

--- a/DreamLuso.Application/DreamLuso.Application.csproj
+++ b/DreamLuso.Application/DreamLuso.Application.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\DreamLuso.Domain\DreamLuso.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="CQ\Clients\Queries\" />
+  </ItemGroup>
+
 </Project>
