Create Command and Queries => Categoy, Account, Client, Comments, Contracts, Property, RealSatateAgent.
Update Database.

--- a/DreamLuso.Application/DreamLuso.Application.csproj
+++ b/DreamLuso.Application/DreamLuso.Application.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="CQ\Clients\Queries\" />
+    <Folder Include="CQ\Contracts\Queries\" />
   </ItemGroup>
 
 </Project>
