--- a/DreamLuso.WebApi/appsettings.Development.json
+++ b/DreamLuso.WebApi/appsettings.Development.json
@@ -13,7 +13,7 @@
   },
   "ConnectionStrings": {
     //"DreamLusoCS": "Server=db.assembly.pt;Database=DV_FC_RO_DreamLuso;User Id=Students; Password=SkillUpForTomorrow; TrustServerCertificate=True"
-    "DreamLusoCS": "Server=localhost\\SQLEXPRESS;Database=DV_FC_RO_DreamLuso;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DreamLusoCS": "Server=localhost\\SQLEXPRESS02;Database=DV_FC_RO_DreamLuso;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
 
   },
   "SmtpSettings": { //PArei aqui 
